[gd_scene load_steps=12 format=3 uid="uid://gxh15sde0me5"]

[ext_resource type="Script" path="res://src/level/level.gd" id="1_el04s"]
[ext_resource type="PackedScene" uid="uid://vl432076bm8p" path="res://src/level/steam_lobby_chat_update/steam_lobby_chat_update.tscn" id="2_acesl"]
[ext_resource type="PackedScene" uid="uid://grxm3658ukjj" path="res://src/battery_spawner/battery_spawner.tscn" id="2_d8ks1"]
[ext_resource type="PackedScene" uid="uid://chog7qk0d8wy7" path="res://src/timer_label/timer_label.tscn" id="2_tx202"]
[ext_resource type="PackedScene" uid="uid://7wne64wo1epb" path="res://src/counting_spawner/counting_spawner.tscn" id="3_xxci0"]
[ext_resource type="PackedScene" uid="uid://ojjy8keargbf" path="res://src/ping_label/ping_label.tscn" id="5_ijd43"]
[ext_resource type="PackedScene" uid="uid://qdsau1mq5mj1" path="res://src/countdown/countdown.tscn" id="7_qv3yx"]
[ext_resource type="PackedScene" uid="uid://kshsc10g60hy" path="res://src/match_menu/match_menu.tscn" id="8_v81sd"]
[ext_resource type="PackedScene" uid="uid://c2coqqrfwvkcy" path="res://src/color_darken_signals/color_darken_signals.tscn" id="9_8c7s2"]
[ext_resource type="PackedScene" uid="uid://beclheud7fmo4" path="res://src/config_handler/config_handler.tscn" id="10_14385"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_63iby"]
properties/0/path = NodePath("CanvasLayer/EndLabel:text")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("CanvasLayer/EndLabel:visible")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:process_mode")
properties/2/spawn = true
properties/2/replication_mode = 2

[node name="Level" type="Node2D" groups=["levels"]]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_el04s")

[node name="MatchTimer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true
autostart = true

[node name="SteamLobbyChatUpdate" parent="." instance=ExtResource("2_acesl")]

[node name="BatterySpawner" parent="." node_paths=PackedStringArray("spawn_root") instance=ExtResource("2_d8ks1")]
spawn_root = NodePath("../SpawnRoot")

[node name="CameraLimits" type="Node2D" parent="."]

[node name="TopLeft" type="Marker2D" parent="CameraLimits"]

[node name="BottomRight" type="Marker2D" parent="CameraLimits"]
position = Vector2(640, 360)

[node name="SpawnRoot" type="Node2D" parent="."]
y_sort_enabled = true

[node name="CountingSpawner" parent="." instance=ExtResource("3_xxci0")]
_spawnable_scenes = PackedStringArray("res://src/ghost/ghost.tscn", "res://src/hunter/hunter.tscn", "res://src/summon/drain_area/drain_area.tscn", "res://src/battery/battery.tscn")
spawn_path = NodePath("../SpawnRoot")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_63iby")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EndLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -22.5
offset_right = 101.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"LabelBigOutlined"
text = "end message"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" parent="CanvasLayer" node_paths=PackedStringArray("timer") instance=ExtResource("2_tx202")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_right = 16.0
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_type_variation = &"LabelOutlined"
horizontal_alignment = 1
timer = NodePath("../../MatchTimer")

[node name="PingLabel" parent="CanvasLayer" instance=ExtResource("5_ijd43")]
visible = false
modulate = Color(1, 1, 1, 0.498039)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 37.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3

[node name="Countdown" parent="CanvasLayer" node_paths=PackedStringArray("timer") instance=ExtResource("7_qv3yx")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.5
offset_top = -14.0
offset_right = 9.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_type_variation = &"LabelBigOutlined"
timer = NodePath("../../MatchTimer")

[node name="MatchMenu" parent="CanvasLayer" instance=ExtResource("8_v81sd")]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.126, 0.126, 0.126, 1)

[node name="ColorDarkenSignals" parent="CanvasModulate" instance=ExtResource("9_8c7s2")]
color = Color(1, 1, 1, 1)

[node name="ConfigHandler" parent="CanvasModulate/ColorDarkenSignals" instance=ExtResource("10_14385")]
section = "display"
key = "brightness"

[connection signal="timeout" from="MatchTimer" to="." method="_on_match_timer_timeout"]
[connection signal="all_scenes_spawned" from="CountingSpawner" to="." method="_on_counting_spawner_all_scenes_spawned"]
[connection signal="darkened_color_changed" from="CanvasModulate/ColorDarkenSignals" to="CanvasModulate" method="set_color"]
[connection signal="loaded" from="CanvasModulate/ColorDarkenSignals/ConfigHandler" to="CanvasModulate/ColorDarkenSignals" method="set_inverted_darken_amount"]
[connection signal="ready" from="CanvasModulate/ColorDarkenSignals/ConfigHandler" to="CanvasModulate/ColorDarkenSignals/ConfigHandler" method="load_value"]
